--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>sigitActivities</title>
+  <title>Portfolio</title>
   <link rel="stylesheet"
     href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -130,8 +130,8 @@
       <div class="row full-screen align-items-center">
         <div class="home-text">
           <p>Hi..!</p>
-          <h2>Saya sigit</h2>
-          <h1>Web Designer & Developer</h1>
+          <h2>Saya Sigit</h2>
+          <h1>Front-end Web Developer</h1>
           <a href="#about" class="link-item btn-1 outer-shadow hover-in-shadow">More About Me</a>
         </div>
         <div class="home-img">
@@ -173,7 +173,7 @@
 
         </div>
         <div class="about-info">
-          <p><span>Hi! Nama saya sigit. Saya sebagai seorang Desainer & Pengembang Web.</span> Saya bertanggung
+          <p><span>Hi! Nama Saya Sigit. Saya sebagai seorang { Front-end Web Developer }.</span> Saya bertanggung
             jawab dalam merancang dan membangun situs web mulai dari merancang layout, site map, navigasi, warna dan
             tampilan hingga isi dari situs itu sendiri.</p>
           <p>Saya juga bertanggung jawab atas tampilan desain, mengembangkan dan memodifikasi situs web serta menguji
